--- a/myenv/pyvenv.cfg
+++ b/myenv/pyvenv.cfg
@@ -1,5 +1,5 @@
 home = C:\Program Files\Python312
 include-system-site-packages = false
 version = 3.12.5
-executable = C:\Program Files\Python312\python.exe
-command = C:\Program Files\Python312\python.exe -m venv C:\Users\POINT\crypto3\myenv
+executable = C:\Users\POINT\crypto3\myenv\Scripts\python.exe
+command = C:\Users\POINT\crypto3\myenv\Scripts\python.exe -m venv C:\Users\POINT\crypto3\myenv
